test/bad/resolve/BadNegate.hs
module BadNegate where

negative = id `id` -4
